change the FAIR acronym in the document from short to long (it avoid the warning)

--- a/1introduction.tex
+++ b/1introduction.tex
@@ -10,7 +10,7 @@ As a result a \ac{combine} archive offers the unique opportunity to not only rep
 It is obvious that this creates a much higher accessibility of complex data that derives from systems medicine and systems biology for researchers and provides a better reproducibility of scientific results.
 
 \subsubsection*{Agile working}
-Agile working has been a major drive for the evolution in working environments especially in information technologies. New definitions on how, where, with whom and when collaboration and the completion of tasks is done are enabled by digital cloud solutions and co-working platforms that integrate the allocation of tasks, versioning of content and the ad-hoc foramtion of teams. GitHub has been used as an essential common platform for managing software projects and supporting collaborative development. Now a day some educational projects have begun to adopt it for hosting and managing course content because it gets transparency features to create, reuse, and remix materials; and to monitor activity on assignments and projects \cite{github}. In the development of this COMBINE archive we dedicated ourselves to the \acs{fair}-principles and therefore built a completely publicly traceable working environment in git, that can be accessed via the link given in the appendices.
+Agile working has been a major drive for the evolution in working environments especially in information technologies. New definitions on how, where, with whom and when collaboration and the completion of tasks is done are enabled by digital cloud solutions and co-working platforms that integrate the allocation of tasks, versioning of content and the ad-hoc foramtion of teams. GitHub has been used as an essential common platform for managing software projects and supporting collaborative development. Now a day some educational projects have begun to adopt it for hosting and managing course content because it gets transparency features to create, reuse, and remix materials; and to monitor activity on assignments and projects \cite{github}. In the development of this COMBINE archive we dedicated ourselves to the \ac{fair}-principles and therefore built a completely publicly traceable working environment in git, that can be accessed via the link given in the appendices.
 
 
 
