Updates from Overleaf

--- a/31discussion.tex
+++ b/31discussion.tex
@@ -6,3 +6,9 @@
     \item Meaning and generalisability of the study
     \item Unanswered and new questions
 \end{itemize}
+
+"The purpose of discussion is that the study should be subjected to a critical analysis of the study results
+by the authors themselves. Any lessons learned - both with respect to study questions and the
+methodology - should be reported for others to learn from.
+A structured discussion as proposed below is often not required by the journal but it will ease the
+writing as well as the reading."  
