--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -172,3 +172,31 @@
     pages = {1-14},
     number = {6},
 }
+
+@article{tiwari2021reproducibility,
+  title={Reproducibility in systems biology modelling},
+  author={Tiwari, Krishna and Kananathan, Sarubini and Roberts, Matthew G and Meyer, Johannes P and Sharif Shohan, Mohammad Umer and Xavier, Ashley and Maire, Matthieu and Zyoud, Ahmad and Men, Jinghao and Ng, Szeyi and others},
+  journal={Molecular Systems Biology},
+  volume={17},
+  number={2},
+  pages={e9982},
+  year={2021}
+}
+
+@article{specificationsb,
+	title = {Specifications of {Standards} in {Systems} and {Synthetic} {Biology}: {Status} and {Developments} in 2017},
+	volume = {15},
+	issn = {1613-4516},
+	shorttitle = {Specifications of {Standards} in {Systems} and {Synthetic} {Biology}},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6167034/},
+	doi = {10.1515/jib-2018-0013},	
+	number = {1},
+	urldate = {2021-09-30},
+	journal = {Journal of Integrative Bioinformatics},
+	author = {Schreiber, Falk and Bader, Gary D. and Gleeson, Padraig and Golebiewski, Martin and Hucka, Michael and Keating, Sarah M. and Novère, Nicolas Le and Myers, Chris and Nickerson, David and Sommer, Björn and Waltemath, Dagmar},
+	month = mar,
+	year = {2018},
+	%pmid = {29596055},
+	%pmcid = {PMC6167034},
+	pages = {20180013}
+	}
