--- a/2methods.tex
+++ b/2methods.tex
@@ -1,16 +1,22 @@
-\section*{Materials and methods} \label{matmet}
+\section*{Materials and methods} \label{sec:matmet}
 
-In this case study we aimed to develop a fully featured \ac{combine} Archive of a dynamic pathway model investigating the role of suppressor of cytokine (SOCS) family members in JAK2/STAT5 signaling \cite{bachmannmodel}. Generation of the \ac{combine} Archive was performed in accordance with a recently published guideline from Schwarm and Waltemath \cite{combine}.
+In this case study we aimed to develop a fully featured \ac{combine} Archive of a dynamic pathway model investigating the role of \ac{socs} family members in JAK2/STAT5 signaling \cite{bachmannmodel}. Generation of the \ac{combine} Archive was performed in accordance with a recently published guideline from Schwarm and Waltemath \cite{combine}.
 
 The tasks of this project were was distributed on  four teams and split into the sections 'the management of a documentation platform', 'review of existing materials', 'comparison of provided models', 'graphical representation', and 'supply of a model script'.
 
-\subsection*{Setup of an agile working environment}
+\subsection*{Setup of an agile working environment} \label{setupagwork}
 To provide the model from Bachmann et. al. \cite{bachmannmodel} as a Fully Featured \ac{combine} Archive, we created a public repository using the open-source platform GitHub, with a CC0-1.0 License. We chose GitHub as a data management platform to supervise the course of the project because it provides an intuitive and easy customizable environment, along with some features for documentation, and agile project management \cite{github}. This repository contains the proposal directory's structure from Scharm \& Waltemath \cite{combine} with the directories documentation, model, experiment, and result.
+\begin{itemize}
+    \item documentation: files describing the model and its characteristics, e.g. original paper
+    \item model: files describing and encoding the biological system, e.g. \ac{sbml} format.
+    \item experiment: files describing and encoding the experimental setup, e.g. \ac{sedml}.
+    \item result: files obtained from running \textit{in silico} experiments, including plots and tables.
+\end{itemize}
 
 To achieve this goal, we research the literature about the Bachmann model and the \ac{combine} Archive, along with modeling file formats, checking the reproducibility of the \ac{combine} structure and software tools that had been used. In addition, we established communication channels, developed a rough schedule, provided a template for documentation, and periodically reviewed intermediate deliverables.
 
 \subsection*{Model selection}
-In our research, we found six \ac{sbml}-Bachmann models in two different repositories, \hyperlink{https://www.systemsmedicine.net/posts/jws-online-biological-systems-modelling}{JWS Online} and \hyperlink{https://www.ebi.ac.uk/biomodels/}{BioModels} (see Results). We chose the latest model from 14th November 2019 to perform other tasks in our project, because it provides complementary files for the simulation.
+In our research, we found five \ac{sbml}-Bachmann models in two different repositories, \hyperlink{https://www.systemsmedicine.net/posts/jws-online-biological-systems-modelling}{JWS Online} and \hyperlink{https://www.ebi.ac.uk/biomodels/}{BioModels} (see Baseline data). We chose the latest model from 14th November 2019 to perform other tasks in our project, because it provides complementary files for the simulation.
 
 \subsection*{Software tools and Versions}
 We found and tested five software tools for the simulation of biological systems:
@@ -18,7 +24,7 @@ We found and tested five software tools for the simulation of biological systems
     \item \hyperlink{https://www.systemsmedicine.net/posts/jws-online-biological-systems-modelling}{JWS Online}, Systems Biology tool for the construction, modification, and simulation of kinetic models and the storage of curated models \cite{jwsonline}. On this repository was one of the found models.
     \item \hyperlink{https://cat.bio.informatik.uni-rostock.de/}{Webviewer Uni Rostock} (CombineArchiveWeb), a tool to visualize and manage \ac{combine} files \cite{combine}; this is the goal application of our project. 
     \item \hyperlink{http://copasi.org/}{\ac{copasi}}, a software application for the simulation and analysis of biochemical networks and their dynamics \cite{copasi}.
-    \item \hyperlink{https://sed-ml.org/}{\ac{sedml}}, a suite of tools for creating, editing, simulating and validating \ac{sedml} files \cite{sedml}. 
+    \item \hyperlink{https://sed-ml.org/}{\ac{swt}}, a suite of tools for creating, editing, simulating and validating \ac{sedml} files \cite{sedml}. 
     \item \hyperlink{https://tellurium.readthedocs.io/en/latest/}{Tellurium},  a tool to model, simulate and analyze biochemical systems \cite{tellurium}.
 \end{enumerate}
 
@@ -40,3 +46,7 @@ The created \ac{sedml} files were validated in \ac{sedml} WebTools and integrate
 \end{enumerate}
 
 \subsection*{Creation of the \acs{combine} Archive}
+
+We have built a fully-featured \ac{combine} archive of the Bachmann model in the web platform CombineArchiveWeb. We used the same files structure as described by Bachmann \textit{et. al.} (see Setup of an agile working environment), this was extended with other subfolders containing supplementary files. To perform this task, we created a new empty archive with our credentials on the CombineArchiveWeb with the name \textsf{::bachmann}. The metadata section of our \ac{combine} archive includes a brief description of the study and the contact data of the members.
+
+The folder documentation includes the initial paper from Bachmann \textit{et. al.}  with its additional materials, the paper from Scharm \& Waltemath, and a \textsf{bib.file} with the used references in our project. In the model's folder are the file with the last version of the Bachmann model from 2019 (see Model selection) and the subfolder \textsf{sbgn}. This contains pictures, \ac{sbgnml} files, and other supplemantary files to visualize the model. The folder experiment has Python-scripts, \ac{sedml} files, and other additional files to support the simulation. The results of the different simulations and validations are in the folder result. This folder contains the subfolders Default, Fig(3 - 5), SuppFig9, and SuppFig9\_COPASI; these incorporate \ac{csv} files with tables, PDF files with reports, and pictures of the performed simulations with different tools; the subfolder Validation, in the folder result has the folders Test\_COPASI\_2021-06-28 and Test\_SWT\_2021-06-28, with subfolders and data files of the performed validations from \ac{copasi} and \ac{swt}.
