--- a/4conclusions.tex
+++ b/4conclusions.tex
@@ -1,9 +1,17 @@
-\section*{Conclusions}
+\section*{Conclusions and Future work}
 
 "The conclusion summarizes the main findings, discusses the impact of the findings and
 how they relate back to the big picture described in the introduction section, gives
 recommendations by the author and provides a short outlook for future research."
 
+\subsection*{Summary of conclusions}
 In summary, we were able to reproduce many, but not all experiments. Several parameters required to reproduce individual plots were not included in the model itself and would have to be added manually based on details provided in the supplementary material. The specific problems encountered while attempting to reproduce the experiments will be addressed in separate GitHub issues for future reference. 
-\\
-\\
+
+\subsection*{Relation to existing evidence}
+
+\subsection*{Limitations}
+
+\subsection*{Future work}
+
+%\\
+%\\
