More boring modifications :-(

--- a/00titlepage.tex
+++ b/00titlepage.tex
@@ -1,5 +1,5 @@
 \begin{titlepage}
-{\noindent\huge{COMBACH: A Fully Featured COMBINE Archive of a Dynamic Pathway Simulation}}
+{\noindent\huge{COMBACH: Creation of a Fully Featured COMBINE Archive to Reproduce a Dynamic Pathway Model of JAK/STAT5 Signaling}}
 
 %An update of the Bachmann COMBINE archive}}
 
@@ -18,7 +18,7 @@
 \input{0abstract}
  \hspace{10pt}
 
-\noindent\keywords{Systems Biology, Computational Biology, Data Science, Medical Informatics, Usability, \acs{combine}, containers, data}
+\noindent\keywords{Systems Biology, Computational Biology, Data Science, Medical Informatics, Usability, mathematical modeling, negative feedback, \ac{socs}, \acs{combine}, containers, data}
 
 \hrule
 \end{titlepage}
