--- a/2methods.tex
+++ b/2methods.tex
@@ -1,8 +1,8 @@
 \section*{Materials and methods} \label{sec:matmet}
 
-In this case study we aimed to develop a fully featured \ac{combine} Archive of a dynamic pathway model investigating the role of \ac{socs} family members in JAK2/STAT5 signaling \cite{bachmannmodel}. Generation of the \ac{combine} Archive was performed in accordance with a recently published guideline from Schwarm and Waltemath \cite{combine}.
+Generation of the \ac{combine} Archive was performed in accordance with a recently published guideline from Schwarm and Waltemath \cite{combine}.
 
-The tasks of this project were was distributed on  four teams and split into the sections 'the management of a documentation platform', 'review of existing materials', 'comparison of provided models', 'graphical representation', and 'supply of a model script'.
+The tasks of this project were distributed on  four teams and split into the sections 'the management of a documentation platform', 'review of existing materials', 'comparison of provided models', 'graphical representation', and 'supply of a model script'.
 
 \subsection*{Setup of an agile working environment} \label{setupagwork}
 To provide the model from Bachmann et. al. \cite{bachmannmodel} as a Fully Featured \ac{combine} Archive, we created a public repository using the open-source platform GitHub, with a CC0-1.0 License. We chose GitHub as a data management platform to supervise the course of the project because it provides an intuitive and easy customizable environment, along with some features for documentation, and agile project management \cite{github}. This repository contains the proposal directory's structure from Scharm \& Waltemath \cite{combine} with the directories documentation, model, experiment, and result.
@@ -50,3 +50,5 @@ The created \ac{sedml} files were validated in \ac{sedml} WebTools and integrate
 We have built a fully-featured \ac{combine} archive of the Bachmann model in the web platform CombineArchiveWeb. We used the same files structure as described by Bachmann \textit{et. al.} (see Setup of an agile working environment), this was extended with other subfolders containing supplementary files. To perform this task, we created a new empty archive with our credentials on the CombineArchiveWeb with the name \textsf{::bachmann}. The metadata section of our \ac{combine} archive includes a brief description of the study and the contact data of the members.
 
 The folder documentation includes the initial paper from Bachmann \textit{et. al.}  with its additional materials, the paper from Scharm \& Waltemath, and a \textsf{bib.file} with the used references in our project. In the model's folder are the file with the last version of the Bachmann model from 2019 (see Model selection) and the subfolder \textsf{sbgn}. This contains pictures, \ac{sbgnml} files, and other supplemantary files to visualize the model. The folder experiment has Python-scripts, \ac{sedml} files, and other additional files to support the simulation. The results of the different simulations and validations are in the folder result. This folder contains the subfolders Default, Fig(3 - 5), SuppFig9, and SuppFig9\_COPASI; these incorporate \ac{csv} files with tables, PDF files with reports, and pictures of the performed simulations with different tools; the subfolder Validation, in the folder result has the folders Test\_COPASI\_2021-06-28 and Test\_SWT\_2021-06-28, with subfolders and data files of the performed validations from \ac{copasi} and \ac{swt}.
+
+We could upload all data from our repository but report XML files for validations. On this step, the CobineArchiveWeb interface launches the following error: \textbf{Unknown Error: Cannot upload file}, therefore we created a new issue in the GitHub repository from CobineArchiveWeb but did not encounter the settlement of the problem during the project.
