--- a/5abbreviation.tex
+++ b/5abbreviation.tex
@@ -17,4 +17,5 @@ Medicine}
         \acro{swt}[SWT]{SED-ML\_Web\_Tools}
         \acro{vanted}[VANTED]{Visualisation and Analysis of Networks containing Experimental Data}
         \acro{csv}[CSV]{comma-separated values}
+        \acro{mii}[MII]{Medical Informatics Initiative}
     \end{acronym}
