--- a/main.tex
+++ b/main.tex
@@ -9,7 +9,7 @@
 \pagenumbering{gobble}
 \usepackage{csquotes}
 \usepackage{hyperref}
-\usepackage[style=numeric,maxbibnames=100,backend=biber]{biblatex}
+\usepackage[style=numeric,maxbibnames=100,backend=biber,sorting=none]{biblatex}
 \usepackage{acronym} 
 \usepackage{titlesec}
 
@@ -49,7 +49,7 @@
 \noindent\small \textbf{Authors' contribution:} The authors contributed equally to this work. \\ 
 \noindent\small \textbf{Competing interests:} The authors declare no competing interests.\\
 \noindent\small \textbf{Funding:} None.\\
-\noindent\small \textbf{Acknoledgement:}...
+\noindent\small \textbf{Acknowledgments:}...
 
 \input{5abbreviation}
 
