--- a/6appendices.tex
+++ b/6appendices.tex
@@ -3,7 +3,7 @@
 \subsection*{GitHub Repository} \label{git}
 
 Our public GitHub repository is available here: \url{https://github.com/ahodelin/Bachmann_Archive}.
-This repository is a collaborative effort of participants of the module "Bioinformatik und Systembiologie" in the Master Program BIDS, organized by the Graduate School Rhein-Neckar in cooperation with MIRACUM, a consortium of the Medical Informatics Initiative.
+This repository is a collaborative effort of participants of the module "Bioinformatik und Systembiologie" in the Master Program \ac{bids}, organized by the Graduate School Rhein-Neckar in cooperation with the \ac{miracum}, a consortium of the \ac{mii}.
 
 \subsection*{COMBINE Archive}
 
