Updates from Overleaf

--- a/00titlepage.tex
+++ b/00titlepage.tex
@@ -1,10 +1,14 @@
 \begin{titlepage}
+\vspace{6cm}
+\begin{centering}
+
+
 {\noindent\huge{COMBACH: Creation of a Fully Featured COMBINE Archive to Reproduce a Dynamic Pathway Model of JAK/STAT5 Signaling}}
 
-%An update of the Bachmann COMBINE archive}}
+\end{centering}
 
-%\\ \\
-\vspace{10pt}
+
+\vspace{30pt}
 \noindent\textbf{Oliver H\"olsken$^{1,4,5}$~\orcidlink{0000-0001-6086-9275}, Felix Patricius Hans$^{2,4}$~\orcidlink{0000-0002-7164-7624}, Sami Habib$^{3,4}$~\orcidlink{0000-0003-4087-2869}, Abel Hodelin Hernandez$^{3,4}$~\orcidlink{0000-0002-4295-9899}}
 \\ \\
 	\small $^{1}$Charité – Universit\"atsmedizin Berlin, corporate member of Freie Universit\"at Berlin and HumboldtUniversit\"at zu Berlin, Laboratory of Innate Immunity, Department of Microbiology, Infectious Diseases and Immunology, Berlin, Germany \\
@@ -14,11 +18,13 @@
 	\small $^{5}$Heidelberg Bioscience International Graduate School, Heidelberg University, Heidelberg, Germany \\
 	\\
 
+
+\newpage
 \hrule
 \input{0abstract}
  \hspace{10pt}
 
-\noindent\keywords{Systems Biology, Computational Biology, Data Science, Medical Informatics, Usability, mathematical modeling, negative feedback, \ac{socs}, \acs{combine}, containers, data}
+\noindent\keywords{Systems Biology, Computational Biology, Data Science, Medical Informatics, Usability, mathematical modeling, negative feedback, \ac{socs}, \acs{combine}}
 
 \hrule
 \end{titlepage}
