--- a/1introduction.tex
+++ b/1introduction.tex
@@ -1,9 +1,9 @@
 \section*{Introduction}
 
 \subsection*{Scientific background}
-Reproducibility of results is one of the most fundamental requirement for credibility in scientifc research \cite{tiwari2021reproducibility}. However, in recent years it became evident that a substantial part of study results are not reproducible. A recent systematic review found that almost 50\% of modeling studies could not be reproduced \cite{tiwari2021reproducibility}. Especially in systems biology and systems medicine, the increase in size and complexity proposes new challenges to share reproducible results. Therefore, several initiatives such as the \hyperlink{https://fair-dom.org/}{FAIDROM} or \hyperlink{http://co.mbine.org/}{COMBINE} were formed aiming to develop and provide standardization efforts and tools to enhance reproducibility in systems biology \cite{specificationsb}. One of these tools are so called \ac{combine} archives, which aim to improve the coordination of standard formats for several features of simulation studies, such as \ac{sbml}, CellML, \ac{sbgn}, and \ac{sbrml}. These standards aim to encode, simulate and visualize biological models \cite{combine}. At the moment, there is no comparable tool available, yet the number of modeling studies providing the data-set and meta-data in form of a \ac{combine} archives are limited. 
+Reproducibility of results is one of the most fundamental requirement for credibility in scientifc research \cite{tiwari2021reproducibility}. However, in recent years it became evident that a substantial part of study results are not reproducible. A recent systematic review found that almost 50\% of modeling studies could not be reproduced \cite{tiwari2021reproducibility}. Especially in systems biology and systems medicine, the increase in size and complexity proposes new challenges to share reproducible results. Therefore, several initiatives such as the \hyperlink{https://fair-dom.org/}{FAIDROM} or \hyperlink{http://co.mbine.org/}{COMBINE} were formed aiming to develop and provide standardization efforts and tools to enhance reproducibility in systems biology \cite{specificationsb}. One of these tools are so called \ac{combine} archives, which aim to improve the coordination of standard formats for several features of simulation studies, such as \ac{sbml}, CellML, \ac{sbgn}, and \ac{sbrml}. These standards aim to encode, simulate and visualize biological models \cite{combine}. However, there is no comparable tool available, yet the number of modeling studies providing the data-set and meta-data in form of a \ac{combine} archives are limited. 
 
-As a result a \ac{combine} archive offers the unique opportunity to not only reproduce simulation results but also to access comprehensive metadata such as author information, publication IDs (e.g. \ac{doi}) and simulation details in one single file. The vast majority of this information usually  is stored in different data formats that require a bundle of software tools to handle. Combine instead brings a single executable file which is easy to access and comes with proper provenience information. It is obvious that this creates a much higher accessibility of complex data that derives from systems medicine and systems biology for researchers and provides a better reproducibility of scientific results.
+To address this constraint \ac{combine} archive offer the unique opportunity to not only reproduce simulation results but also to access comprehensive metadata such as author information, publication IDs (e.g. \ac{doi}) and simulation details in one single file. The vast majority of this information usually  is stored in different data formats and locations that require a bundle of software tools to handle. Combine instead brings a single executable file, which is easy to access and comes with proper provenience information. It is obvious that this creates a much higher accessibility of complex data that derives from systems medicine and systems biology for researchers and provides a better reproducibility of scientific results.
 
 \subsection*{Rationale for this study}
 Given the background of the only partially reproducible dynamic pathway model of \ac{socs} family members in JAK2/STAT5 signaling from Bachmann \textit{et. al.} \cite{bachmannmodel}, we  were asked to  to create a fully featured archive and reproduce the simulation content both for educational purposes and for scientific completion of the original work. Furthermore, the created COMBINE Archive could serve as a template to enhance reproducibility of future modelling studies.
