--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -200,3 +200,14 @@
 	%pmcid = {PMC6167034},
 	pages = {20180013}
 	}
+
+
+@misc{Knegendorf.,
+ abstract = {Contribute to Fuenfgeld/ATeamDatenmanagementUndArchivierung development by creating an account on GitHub.},
+ author = {Knegendorf, Leonard and Hans, Felix Patricius and Haubold, Carmen},
+ title = {Github: Fuenfgeld/ATeamDatenmanagementUndArchivierung},
+ url = {https://github.com/Fuenfgeld/ATeamDatenmanagementUndArchivierung},
+ urldate = {30.09.2021}
+}
+
+
