--- a/1introduction.tex
+++ b/1introduction.tex
@@ -6,25 +6,27 @@ Reproducibility of results is one of the most fundamental requirement for credib
 To address this constraint \ac{combine} archive offer the unique opportunity to not only reproduce simulation results but also to access comprehensive metadata such as author information, publication IDs (e.g. \ac{doi}) and simulation details in one single file. The vast majority of this information usually  is stored in different data formats and locations that require a bundle of software tools to handle. Combine instead brings a single executable file, which is easy to access and comes with proper provenience information. It is obvious that this creates a much higher accessibility of complex data that derives from systems medicine and systems biology for researchers and provides a better reproducibility of scientific results.
 
 \subsection*{Rationale for this study}
+\subsubsection*{Dyamic Pathway Simulations}
+Dynamic pathway modeling is needed to describe the complex regulatory system of feedback regulators, to answer this question, Bachmann \textit{et. al.} built a dual negative feedback model of JAK2/STAT5 signaling in primary erythroid progenitor cells isolated from mouse fetal livers \cite{bachmannmodel}.
+
 Given the background of the only partially reproducible dynamic pathway model of \ac{socs} family members in JAK2/STAT5 signaling from Bachmann \textit{et. al.} \cite{bachmannmodel}, we  were asked to  to create a fully featured archive and reproduce the simulation content both for educational purposes and for scientific completion of the original work. Furthermore, the created COMBINE Archive could serve as a template to enhance reproducibility of future modelling studies.
 
-%the environment of the master degree class for \ac{bids} at the Graduate School Rhein-Neckar  in  collaboration  with  the \ac{miracum} in Germany offered the unique opportunity
-
-
 \subsubsection*{Agile working}
-Agile working has been a major drive for the evolution in working environments especially in information technologies. New definitions on how, where, with whom and when collaboration and the completion of tasks is done are enabled by digital cloud solutions and co-working platforms that integrate the allocation of tasks, versioning of content and the \textit{ad-hoc} formation of teams. GitHub has been used as an essential common platform for managing software projects and supporting collaborative development. Now a day some educational projects have begun to adopt it for hosting and managing course content because it gets transparency features to create, reuse, and remix materials; and to monitor activity on assignments and projects \cite{github}. In the development of this COMBINE archive we dedicated ourselves to the \ac{fair}-principles and therefore built a completely publicly traceable working environment in github, that can be accessed via the link given in the appendices.
+Agile working has been a major drive for the evolution of working environment sespecially in information technologies. New definitions on how, where, with whom and when collaboration and the completion of tasks is done are enabled by digital cloud solutions and co-working platforms that integrate the allocation of tasks, versioning of content and the \textit{ad-hoc}-formation of teams. GitHub as a provider of internet-hosted software development and version control tools has been used as an essential common platform for managing software projects and supporting collaborative development. Lately some educational projects have begun to adopt it for hosting and managing course content to enhance transparency features in the creation, reuse, and remix of materials \cite{github, Knegendorf.}. In the development of this COMBINE archive we dedicated ourselves to the \acs{fair}-principles and therefore built a completely publicly traceable working environment in github, that can be accessed via the link given in the appendices.
 
-\subsubsection*{Dyamic Pathway Simulations}
-Dynamic pathway modeling is needed to describe the complex regulatory system of feedback regulators, to answer this question, Bachmann \textit{et. al.} built a dual negative feedback model of JAK2/STAT5 signaling in primary erythroid progenitor cells isolated from mouse fetal livers. \cite{bachmannmodel}.
+
 
 \subsection*{Objectives}
-The main objective of this case study was to create a fully featured \acs{combine}-archive including both scripts to reproduce all simulation figures and easy to access simulation data of the Bachmann model, a dynamic pathway model of JAK/STAT5 signaling \cite{bachmannmodel}. Furthermore, we aimed to create an easy to use guideline on how to compile a \acs{combine} archive out of an existing simulation model. Besides these aims we were also interested in validating all generated scripts using established tools. Finally, we aimed to evaluate the used tools in terms of usability and assessed the completeness of the provided data to reproduce the entire study.
+The main objective of this case study was to create a fully featured \acs{combine}-archive including both scripts to reproduce all simulation figures and easy to access simulation data of the Bachmann model, a dynamic pathway model of JAK/STAT5 signaling \cite{bachmannmodel}. Furthermore, we aimed to create an easy to use guideline on how to compile a \acs{combine} archive out of an existing simulation model. Besides these aims we were also interested in validating all generated scripts using already established tools. Finally, we aimed to evaluate the used tools in terms of usability and assessed the completeness of the provided data to reproduce the entire study.
 
-\subsection*{Study design} %ggf. in die Objectives mit einbauen.
-
+\subsection*{Study design}
+This case study describes the implementation process of a \ac{combine} archive.
 \subsubsection*{Research questions}
+The research question was whether there is a comprehensive way of developing a \ac{combine} archive out of publicly available data sources that allow the public to reproduce all simulation data including the resulting graphs. As secondary question we tested if this task could be performed, documented and archived in an agile working environment and according to the \acs{fair}-principles.
 \subsubsection*{Analysis procedures}
+To analyze the function of the \ac{combine}-archive we run several own simulations during the development process and compared the results with existing data from the original publication and with existing graphs ibidem.
 \subsubsection*{Validity procedures}
+To validate the results of our \ac{combine} archive we conducted a strucured search for available modelling data, tested the content on a metadata level and created \ac{sbgn}- and \ac{sedml}-files that were challenged against the original data in numeric and graphic analyses.
 
 \begin{enumerate}
     \item Sichtung vorhandener Materialien; Komposition des COMBINE Archives; Dokumentationstemplate; Prüfung der Zwischenergebnisse
