sort \acro, smoothen methods

--- a/1introduction.tex
+++ b/1introduction.tex
@@ -20,20 +20,20 @@ Agile working has been a major drive for the evolution of working environment se
 The main objective of this case study was to create a fully featured \acs{combine}-archive including both scripts to reproduce all simulation figures and easy to access simulation data of the Bachmann model, a dynamic pathway model of JAK/STAT5 signaling \cite{bachmannmodel}. Furthermore, we aimed to create an easy to use guideline on how to compile a \acs{combine} archive out of an existing simulation model. Besides these aims we were also interested in validating all generated scripts using already established tools. Finally, we aimed to evaluate the used tools in terms of usability and assessed the completeness of the provided data to reproduce the entire study.
 
 \subsection*{Study design}
-This case study describes the implementation process of a \ac{combine} archive.
+This case study describes the implementation process of a \ac{combine} archive using agile co-working and publicly available documentation.
 \subsubsection*{Research questions}
 The research question was whether there is a comprehensive way of developing a \ac{combine} archive out of publicly available data sources that allow the public to reproduce all simulation data including the resulting graphs. As secondary question we tested if this task could be performed, documented and archived in an agile working environment and according to the \acs{fair}-principles.
 \subsubsection*{Analysis procedures}
 To analyze the function of the \ac{combine}-archive we run several own simulations during the development process and compared the results with existing data from the original publication and with existing graphs ibidem.
 \subsubsection*{Validity procedures}
-To validate the results of our \ac{combine} archive we conducted a strucured search for available modelling data, tested the content on a metadata level and created \ac{sbgn}- and \ac{sedml}-files that were challenged against the original data in numeric and graphic analyses.
+To validate the results of our \ac{combine} archive we conducted a systematic search for available modeling data, tested the content on a metadata level and created \ac{sbgn}- and \ac{sedml}-files that were challenged against the original data in numeric and graphic analyses.
 
-\begin{enumerate}
-    \item Sichtung vorhandener Materialien; Komposition des COMBINE Archives; Dokumentationstemplate; Prüfung der Zwischenergebnisse
-    \item Vergleich der bereitgestellten SBML-Modelle, Auswahl und Bereitstellung ausführlicher Metadaten
-    \item Bereitstellung des SBGN-Modells (grafische Darstellung) 
-    \item Bereitstellung mind. eines SED-ML-Skripts (ggf. mehrere)
-\end{enumerate}
+%%\begin{enumerate}
+  %  \item Sichtung vorhandener Materialien; Komposition des COMBINE Archives; Dokumentationstemplate; Prüfung der Zwischenergebnisse
+  %  \item Vergleich der bereitgestellten SBML-Modelle, Auswahl und Bereitstellung ausführlicher Metadaten
+   % \item Bereitstellung des SBGN-Modells (grafische Darstellung) 
+    %\item Bereitstellung mind. eines SED-ML-Skripts (ggf. mehrere)
+%\end{enumerate}
 
 %Sami und Felix machen Ergebnisse\\
 %Oliver und Abel machen Methoden
