--- a/2methods.tex
+++ b/2methods.tex
@@ -1,11 +1,17 @@
 \section*{Materials and methods} \label{sec:matmet}
 
-Generation of the \ac{combine} Archive was performed in accordance with a recently published guideline from Schwarm and Waltemath \cite{combine}.
+The development of the \ac{combine} Archive was performed in accordance with a recently published guideline from Schwarm and Waltemath \cite{combine}.
 
-The tasks of this project were distributed on  four teams and split into the sections 'the management of a documentation platform', 'review of existing materials', 'comparison of provided models', 'graphical representation', and 'supply of a model script'.
+The tasks of this project were distributed on  four teams and split into the sections 
+\begin{itemize}
+    \item Setup of an agile working environment
+    \item Systematic review of existing materials and comparison of provided models
+    \item Graphical representation
+    \item Supply of a model script
+\end{itemize}
 
 \subsection*{Setup of an agile working environment} \label{setupagwork}
-To provide the model from Bachmann et. al. \cite{bachmannmodel} as a Fully Featured \ac{combine} Archive, we created a public repository using the open-source platform GitHub, with a CC0-1.0 License. We chose GitHub as a data management platform to supervise the course of the project because it provides an intuitive and easy customizable environment, along with some features for documentation, and agile project management \cite{github}. This repository contains the proposal directory's structure from Scharm \& Waltemath \cite{combine} with the directories documentation, model, experiment, and result.
+To provide the model from Bachmann et. al. \cite{bachmannmodel} as a Fully Featured \ac{combine} Archive, we created a public repository using the open-source platform GitHub, with a \ac{cc} CC0-1.0 license. We chose GitHub as a data management platform to supervise the course of the project because it provides an intuitive and easy customizable environment, along with some features for documentation, and agile project management \cite{github}. This repository contains the proposal directory's structure from Scharm \& Waltemath \cite{combine} with the directories documentation, model, experiment, and result.
 \begin{itemize}
     \item documentation: files describing the model and its characteristics, e.g. original paper
     \item model: files describing and encoding the biological system, e.g. \ac{sbml} format.
@@ -15,7 +21,7 @@ To provide the model from Bachmann et. al. \cite{bachmannmodel} as a Fully Featu
 
 To achieve this goal, we research the literature about the Bachmann model and the \ac{combine} Archive, along with modeling file formats, checking the reproducibility of the \ac{combine} structure and software tools that had been used. In addition, we established communication channels, developed a rough schedule, provided a template for documentation, and periodically reviewed intermediate deliverables.
 
-\subsection*{Model selection}
+\subsection*{Systematic review of existing materials and comparison of provided models}
 In our research, we found five \ac{sbml}-Bachmann models in two different repositories, \hyperlink{https://www.systemsmedicine.net/posts/jws-online-biological-systems-modelling}{JWS Online} and \hyperlink{https://www.ebi.ac.uk/biomodels/}{BioModels} (see Baseline data). We chose the latest model from 14th November 2019 to perform other tasks in our project, because it provides complementary files for the simulation.
 
 \subsection*{Software tools and Versions}
