--- a/5abbreviation.tex
+++ b/5abbreviation.tex
@@ -1,21 +1,40 @@
 \subsection*{Acronyms}
     \begin{acronym}[acrmeta]
-        \acro{miracum}[MIRACUM Consortium]{Medical Informatics for Research and Care in University
-Medicine}
+        
         \acro{bids}[BIDS]{Biomedical Informatics and Data Science}
+       
+       \acro{cc}[CC]{Creative Commons}
+       
         \acro{combine}[COMBINE]{Computational Modeling in Biology Network}
-        \acro{doi}[DOI]{Digital Object Identifier}
-        \acro{fair}[FAIR]{Findable, Accessible, Interoperable, Reusable}
-        \acro{sedml}[SED-ML]{Simulation Experiment Description Markup Language}
-        \acro{socs}[SOCS]{suppressor of cytokine}
-        \acro{sbgn}[SBGN]{Systems Biology Graphical Notation}
-        \acro{sbgnml}[SBGN-ML]{Systems Biology Graphical Notation Markup Language}
-        \acro{sbml}[SBML]{Systems Biology Markup Language}
-        \acro{sbrml}[SBRML]{Systems Biology Result Markup Language}
-        \acro{pd}[PD]{Process Description}
+        
         \acro{copasi}[COPASI]{COmplex PAthway SImulator}
-        \acro{swt}[SWT]{SED-ML\_Web\_Tools}
-        \acro{vanted}[VANTED]{Visualisation and Analysis of Networks containing Experimental Data}
+        
         \acro{csv}[CSV]{comma-separated values}
+        
+        \acro{doi}[DOI]{Digital Object Identifier}
+        
+        \acro{fair}[FAIR]{Findable, Accessible, Interoperable, Reusable}
+        
         \acro{mii}[MII]{Medical Informatics Initiative}
+        
+        \acro{miracum}[MIRACUM]{Medical Informatics for Research and Care in University
+Medicine}
+        \acro{pd}[PD]{Process Description}
+        
+        \acro{sedml}[SED-ML]{Simulation Experiment Description Markup Language}
+        
+        \acro{sbgn}[SBGN]{Systems Biology Graphical Notation}
+        
+        \acro{sbgnml}[SBGN-ML]{Systems Biology Graphical Notation Markup Language}
+        
+        \acro{sbml}[SBML]{Systems Biology Markup Language}
+        
+        \acro{sbrml}[SBRML]{Systems Biology Result Markup Language}
+        
+        \acro{socs}[SOCS]{suppressor of cytokine}
+        
+                \acro{swt}[SWT]{SED-ML\_Web\_Tools}
+        
+        \acro{vanted}[VANTED]{Visualisation and Analysis of Networks containing Experimental Data}
+
     \end{acronym}
